syntax = "proto3";
import "passenger.proto";
import "driver.proto";
package pb;

//The Trip service definition.
service Trip {
 rpc GenTrip (GenTripRequest) returns (GenTripReply);
}

message GenTripRequest {
 PublishOrderRequest passenger_req = 1;
 TakeOrderRequest driver_req = 2;
}

message GenTripReply {
 bool status = 1;
 TripMsg trip = 2;
}

message TripMsg {
 int64 trip_num = 1;
 int64 passenger_id = 2;
 int64 driver_id = 3;
 string passenger_name = 4;
 string driver_name = 5;
 int64 start_time = 6;
 int64 end_time = 7;
 string origin = 8;
 string destination = 9;
 string car = 10;
 string path = 11;
}